--- a/web/index.html
+++ b/web/index.html
@@ -4,19 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MNIST Digit Recognizer</title>
+    <!-- Bootstrap 5 for modern styling -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>Draw a Digit</h1>
-    <canvas id="canvas" width="280" height="280"></canvas>
-    <br>
-    <button id="clear-btn">Clear</button>
-    <button id="predict-btn">Predict</button>
-    <h2>Prediction: <span id="prediction">None</span></h2>
-    <div id="chart-container">
-        <canvas id="bar-chart"></canvas>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1d3557;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Handwritten Digit Classifier</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+
+    <div class="container my-5">
+        <div class="row">
+            <!-- Drawing Area -->
+            <div class="col-12 col-md-6 text-center">
+                <h3>Draw a Digit</h3>
+                <canvas id="canvas" width="280" height="280"></canvas>
+                <br>
+                <div class="mt-3">
+                    <button class="btn btn-danger" id="clear-btn">Clear</button>
+                    <button class="btn btn-primary" id="predict-btn">Predict</button>
+                </div>
+            </div>
+            <!-- Prediction and Chart -->
+            <div class="col-12 col-md-6 text-center">
+                <h3>Prediction: <span id="prediction">None</span></h3>
+                <div id="chart-container" class="mt-4">
+                    <canvas id="bar-chart"></canvas>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!-- Bootstrap and Custom JS -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="/static/app.js"></script>
 </body>
 </html>
