--- a/static/index.html
+++ b/static/index.html
@@ -4,69 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MNIST Digit Recognizer</title>
-    <!-- Bootstrap 5 for modern styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/style.css">
-    <style>
-        /* Optional: Improve chart responsiveness */
-        .chart-container {
-            position: relative;
-            width: 100%;
-            height: 400px;
-            margin-top: 30px;
-        }
-
-        /* Center the navbar */
-        nav {
-            background-color: #e6e6e6;
-        }
-
-        /* Adjust container for centering */
-        .main-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 20px;
-        }
-
-        /* Center the columns in the row */
-        .col-custom {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        
-        .col-custom img {
-            width: 100%;
-            max-width: 280px;
-        }
-
-        /* Ensure the chart container is centered */
-        #chart-container {
-            width: 100%;
-            max-width: 700px;
-            margin: 30px auto;
-        }
-    </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">   
             <a class="navbar-brand mx-auto" href="#">Handwritten Digit Classifier</a>
         </div>
     </nav>
 
-    <!-- Main content container -->
+    <!-- Main content -->
     <div class="container-fluid my-5">
         <div class="main-container">
             <!-- Drawing Area -->
             <div class="col-12 col-md-3 col-custom">
                 <h3>1. Draw a Digit</h3>
                 <canvas id="canvas" width="280" height="280"></canvas>
-                <br>
                 <div class="mt-3">
                     <button class="btn btn-danger" id="clear-btn">Clear</button>
                     <button class="btn btn-primary" id="predict-btn">Predict</button>
@@ -76,27 +31,27 @@
             <!-- Grayscale Image -->
             <div class="col-12 col-md-3 col-custom">
                 <h3>2. Grayscale Image (280x280)</h3>
-                <img id="grayscale-img" src="" alt="Grayscale Image (280x280)" class="img-fluid" />
+                <img id="grayscale-img" src="" alt="Grayscale Image" class="img-fluid d-none">
             </div>
 
             <!-- Processed Image -->
             <div class="col-12 col-md-3 col-custom">
                 <h3>3. Rescaled Image (28x28)</h3>
-                <img id="processed-img" src="" alt="Rescaled Image (28x28)" class="resized-image">
+                <img id="processed-img" src="" alt="Rescaled Image" class="resized-image d-none">
             </div>
         </div>
     </div>
 
-    <!-- Prediction and Chart -->
+    <!-- Prediction & Chart -->
     <div class="container-fluid text-center">
-        <h3>4. Prediction</h3>
-        <h4>Prediction: <span id="prediction">None</span></h4>
-        <div id="chart-container" class="mt-4 chart-container">
+        <h3>4. Softmax Probabilities of Classification</h3>
+        <h4>Prediction: <span id="prediction"></span></h4>
+        <div id="chart-container">
             <canvas id="bar-chart"></canvas>
         </div>
     </div>
 
-    <!-- Bootstrap and Custom JS -->
+    <!-- JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/static/app.js"></script>
 </body>
